--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 *.iml
+.idea
 .gradle
 /local.properties
 /.idea/caches/build_file_checksums.ser
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
 .DS_Store
 /build
 /captures
