--- a/umengLib/build.gradle
+++ b/umengLib/build.gradle
@@ -2,8 +2,6 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "28.0.2"
-
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 28
@@ -25,9 +23,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation  'com.umeng.umsdk:common:1.5.4'
 }
