--- a/umengLib/src/main/AndroidManifest.xml
+++ b/umengLib/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.umeng.libs">
+    package="com.umeng.libs.share">
 
     <application>
         <activity
-            android:name=".share.wxapi.WXEntryActivity"
+            android:name=".wxapi.WXEntryActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
             android:screenOrientation="portrait"
