--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,7 @@
 .idea
 .gradle
 /local.properties
-/.idea/caches/build_file_checksums.ser
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
+.idea
 .DS_Store
 /build
 /captures
