--- a/umengLib/build.gradle
+++ b/umengLib/build.gradle
@@ -22,7 +22,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation  'com.umeng.umsdk:common:1.5.4'
+    api  'com.umeng.umsdk:common:1.5.4'
 }
