--- a/umengLib/build.gradle
+++ b/umengLib/build.gradle
@@ -24,4 +24,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.umeng.umsdk:common:2.0.1'
 }
